Fixed a right/left confusion

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,6 @@
     <body>
         <p style="text-align: center; font-size: 32px;">Coming Soon</p>
         <img src="imgs/shoreview1916.jpg"/>
-        <p>View looking north from 36th and Geary with the still under construction Lincoln Manor to the right. Photo from 1916</p>
+        <p>View looking north from 36th and Geary with the still under construction Lincoln Manor to the left. Photo from 1916</p>
     </body>
 </html>
